# eYcel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  ProjectBuildingPlan.md  README.md  eYcel_cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
eYcel-wasm/: Cargo.toml  build.sh
eYcel-wasm/src/: cell_value.rs  column_analyzer.rs  decrypt.rs  encrypt.rs  errors.rs  formula_handler.rs  lib.rs  transformations.rs  xlsx_io.rs  yaml_handler.rs
eYcel-wasm/tests/: format_support.rs  integration.rs
eYcel-wasm/web/: app.js  index.html  style.css
examples/: basic_usage.py  compare_cells.py  generate_sample_data.py  process_sample.py  sample_data.xlsx
gui/: __init__.py  app.py  requirements.txt
src/eYcel/: __init__.py  cli.py  column_analyzer.py  decrypt.py  encrypt.py  exceptions.py  formula_handler.py  memory_utils.py  transformations.py  yaml_handler.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_module.py  test_column_analyzer.py  test_decrypt.py  test_encrypt.py  test_exceptions.py  test_formula_handler.py  test_integration.py  test_memory_utils.py  test_memory_utils_extra.py  test_transformations.py  test_yaml_handler.py
