[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eYcel"
version = "0.1.0"
authors = [
    {name = "Voicu Tomut", email = "voicu.tomut@example.com"},
]
description = "Excel Data Anonymization & Encryption Tool - Preserve formulas while anonymizing data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["excel", "encryption", "anonymization", "formulas", "data-privacy", "gdpr", "openpyxl"]
dependencies = [
    "openpyxl>=3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "memory-profiler>=0.60.0",
]

[project.scripts]
eYcel = "eYcel.cli:main"

[project.urls]
Homepage = "https://github.com/VoicuTomut/eYcel"
Repository = "https://github.com/VoicuTomut/eYcel"
Issues = "https://github.com/VoicuTomut/eYcel/issues"
Documentation = "https://github.com/VoicuTomut/eYcel#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/eYcel --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/eYcel"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".eggs", "*.egg-info", ".venv", ".pytest_cache"]
max-complexity = 10