[package]
name = "eycel-wasm"
version = "0.2.0"
edition = "2021"
description = "Encrypt Excel data before sharing with AI — runs in your browser via WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
calamine = { version = "0.26", features = ["dates"] }
rust_xlsxwriter = { version = "0.79", features = ["wasm"] }
sha2 = "0.10"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
thiserror = "2"
csv = "1.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
